crates/cli_bin/tests/snapshots/parse__correct_variable_ranges_in_snippet_with_multiple_contexts.snap
---
source: crates/cli_bin/tests/parse.rs
expression: "parsed_lines[0]"
---
__typename: PatternInfo
messages: []
variables:
  - name: $new_files
    scopedName: 0_0_$new_files
    ranges: []
  - name: $program
    scopedName: 0_1_$program
    ranges: []
  - name: $filename
    scopedName: 0_2_$filename
    ranges: []
  - name: $absolute_filename
    scopedName: 0_3_$absolute_filename
    ranges: []
  - name: $body
    scopedName: 11_0_$body
    ranges:
      - start: 15
        end: 20
  - name: $match
    scopedName: 11_1_$match
    ranges: []
sourceFile: "`function () { $body }`"
parsedPattern: "[..]"
valid: true
