crates/cli_bin/tests/snapshots/parse__correct_variable_ranges_multiple_snippets_multiple_contexts.snap
---
source: crates/cli_bin/tests/parse.rs
expression: "parsed_lines[0]"
---
__typename: PatternInfo
messages: []
variables:
  - name: $body
    scopedName: 15_0_$body
    ranges:
      - start:
          line: 1
          column: 33
        end:
          line: 1
          column: 38
        startByte: 32
        endByte: 37
  - name: $args
    scopedName: 15_1_$args
    ranges:
      - start:
          line: 1
          column: 24
        end:
          line: 1
          column: 29
        startByte: 23
        endByte: 28
  - name: $body
    scopedName: 16_0_$body
    ranges:
      - start:
          line: 1
          column: 64
        end:
          line: 1
          column: 69
        startByte: 63
        endByte: 68
  - name: $args
    scopedName: 16_1_$args
    ranges:
      - start:
          line: 1
          column: 52
        end:
          line: 1
          column: 57
        startByte: 51
        endByte: 56
sourceFile: "or { bubble `function ($args) { $body }`, bubble `($args) => { $body }` }"
parsedPattern: "[..]"
valid: true
usesAi: false
