crates/cli_bin/tests/snapshots/parse__parses_correct_scopes.snap
---
source: apps/marzano/cli/tests/parse.rs
expression: "parsed_lines[0]"
---
__typename: PatternInfo
messages: []
variables:
  - name: $program
    scopedName: 0_0_$program
    ranges: []
  - name: $filename
    scopedName: 0_1_$filename
    ranges: []
  - name: $new_files
    scopedName: 0_2_$new_files
    ranges: []
  - name: $match
    scopedName: 13_0_$match
    ranges: []
  - name: $body
    scopedName: 14_0_$body
    ranges:
      - start:
          line: 1
          column: 33
        end:
          line: 1
          column: 38
  - name: $args
    scopedName: 14_1_$args
    ranges:
      - start:
          line: 1
          column: 24
        end:
          line: 1
          column: 29
  - name: $body
    scopedName: 15_0_$body
    ranges:
      - start:
          line: 1
          column: 64
        end:
          line: 1
          column: 69
  - name: $args
    scopedName: 15_1_$args
    ranges:
      - start:
          line: 1
          column: 52
        end:
          line: 1
          column: 57
sourceFile: "or { bubble `function ($args) { $body }`, bubble `($args) => { $body }` }"
parsedPattern: "[..]"
valid: true

